src/components/footer/Footer.module.css
.footer {
  --transition-color: color 150ms linear;
  --color-idle: hsl(var(--clr-neutral-100));
  --color-active: hsl(var(--clr-secondary));
  background-color: hsl(var(--clr-primary));
  padding-top: var(--space-xl);
  padding-inline: var(--gutters-inline);
}

.container {
  display: grid;
  gap: var(--space-lg);
}

.left {
  display: grid;
  justify-items: center;
  gap: var(--space-lg);
}

.logoLink,
.socialLink {
  display: block;
  color: var(--color-idle);
}
.logoSvg,
.socialSvg {
  height: 20px;
  transition: var(--transition-color);
}

.logoLink:hover,
.logoLink:focus-visible,
.socialLink:hover,
.socialLink:focus-visible {
  color: var(--color-active);
}

.socials {
  display: flex;
  align-items: center;
  gap: var(--space-base);
}

.navList {
  display: grid;
  gap: var(--space-sm);
}

.navLink {
  text-align: center;
  display: block;
  text-decoration: none;
  font-size: var(--fs-sm);
  color: var(--color-idle);
  transition: color 150ms linear;
}

.navLink:hover,
.navLink:focus-visible {
  color: var(--color-active);
}

.right {
  display: grid;
  gap: var(--space-md);
  text-align: center;
  justify-items: center;
}

.copyright {
  font-size: var(--fs-sm);
  color: var(--color-idle);
  opacity: 0.5;
}

.attribution {
  padding-block: var(--space-xl) var(--space-sm);
  text-align: center;
  font-size: var(--fs-2xs);
}

.attribution span {
  display: inline-block;
}

.attribution a {
  transition: color 150ms linear;
}

.attribution a:hover,
.attribution a:focus-visible {
  color: var(--color-active);
}

@media (--screen-md) {
  .container {
    grid-template-columns: repeat(2, auto) 1fr;
    gap: clamp(4rem, calc(-0.86rem + 10.12vw), 8.25rem);
  }

  .left {
    justify-items: start;
  }

  .navList {
    grid-template-rows: repeat(3, 1fr);
    grid-auto-flow: column;
    grid-auto-columns: auto;
    justify-content: center;
    column-gap: clamp(2rem, calc(-5.14rem + 14.88vw), 8.25rem);
  }

  .navLink {
    text-align: start;
  }

  .right {
    justify-self: end;
    text-align: start;
    justify-items: start;
  }
}

